// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`script-tree get-script-tree-ancestors should get ancestors of child script 1`] = `
{
  "content": [],
  "structuredContent": {
    "items": [
      {
        "hasChildren": true,
        "isFolder": true,
        "name": "",
        "parent": null,
        "path": "/",
      },
      {
        "hasChildren": true,
        "isFolder": true,
        "name": "_RootFolder_NORMALIZED_TIMESTAMP",
        "parent": {
          "id": "00000000-0000-0000-0000-000000000000",
          "path": "/",
        },
        "path": "/_RootFolder_NORMALIZED_TIMESTAMP",
      },
      {
        "hasChildren": false,
        "isFolder": false,
        "name": "_ChildScript_NORMALIZED_TIMESTAMP.js",
        "parent": {
          "id": "00000000-0000-0000-0000-000000000000",
          "path": "/_RootFolder_NORMALIZED_TIMESTAMP",
        },
        "path": "/_RootFolder_NORMALIZED_TIMESTAMP/_ChildScript_NORMALIZED_TIMESTAMP.js",
      },
    ],
  },
}
`;

exports[`script-tree get-script-tree-ancestors should get ancestors of grandchild script 1`] = `
{
  "content": [],
  "structuredContent": {
    "items": [
      {
        "hasChildren": true,
        "isFolder": true,
        "name": "",
        "parent": null,
        "path": "/",
      },
      {
        "hasChildren": true,
        "isFolder": true,
        "name": "_RootFolder_NORMALIZED_TIMESTAMP",
        "parent": {
          "id": "00000000-0000-0000-0000-000000000000",
          "path": "/",
        },
        "path": "/_RootFolder_NORMALIZED_TIMESTAMP",
      },
      {
        "hasChildren": true,
        "isFolder": true,
        "name": "_ChildFolder_NORMALIZED_TIMESTAMP",
        "parent": {
          "id": "00000000-0000-0000-0000-000000000000",
          "path": "/_RootFolder_NORMALIZED_TIMESTAMP",
        },
        "path": "/_RootFolder_NORMALIZED_TIMESTAMP/_ChildFolder_NORMALIZED_TIMESTAMP",
      },
      {
        "hasChildren": false,
        "isFolder": false,
        "name": "_GrandchildScript_NORMALIZED_TIMESTAMP.js",
        "parent": {
          "id": "00000000-0000-0000-0000-000000000000",
          "path": "/_RootFolder_NORMALIZED_TIMESTAMP/_ChildFolder_NORMALIZED_TIMESTAMP",
        },
        "path": "/_RootFolder_NORMALIZED_TIMESTAMP/_ChildFolder_NORMALIZED_TIMESTAMP/_GrandchildScript_NORMALIZED_TIMESTAMP.js",
      },
    ],
  },
}
`;

exports[`script-tree get-script-tree-ancestors should get empty ancestors for root script 1`] = `
{
  "content": [],
  "structuredContent": {
    "items": [
      {
        "hasChildren": true,
        "isFolder": true,
        "name": "",
        "parent": null,
        "path": "/",
      },
      {
        "hasChildren": false,
        "isFolder": false,
        "name": "_RootScript_NORMALIZED_TIMESTAMP.js",
        "parent": {
          "id": "00000000-0000-0000-0000-000000000000",
          "path": "/",
        },
        "path": "/_RootScript_NORMALIZED_TIMESTAMP.js",
      },
    ],
  },
}
`;

exports[`script-tree get-script-tree-children should get children of child folder 1`] = `
{
  "content": [],
  "structuredContent": {
    "items": [
      {
        "hasChildren": false,
        "isFolder": false,
        "name": "_GrandchildScript_NORMALIZED_TIMESTAMP.js",
        "parent": {
          "id": "00000000-0000-0000-0000-000000000000",
          "path": "/_RootFolder_NORMALIZED_TIMESTAMP/_ChildFolder_NORMALIZED_TIMESTAMP",
        },
        "path": "/_RootFolder_NORMALIZED_TIMESTAMP/_ChildFolder_NORMALIZED_TIMESTAMP/_GrandchildScript_NORMALIZED_TIMESTAMP.js",
      },
    ],
    "total": 1,
  },
}
`;

exports[`script-tree get-script-tree-children should get children of root folder 1`] = `
{
  "content": [],
  "structuredContent": {
    "items": [
      {
        "hasChildren": true,
        "isFolder": true,
        "name": "_ChildFolder_NORMALIZED_TIMESTAMP",
        "parent": {
          "id": "00000000-0000-0000-0000-000000000000",
          "path": "/_RootFolder_NORMALIZED_TIMESTAMP",
        },
        "path": "/_RootFolder_NORMALIZED_TIMESTAMP/_ChildFolder_NORMALIZED_TIMESTAMP",
      },
      {
        "hasChildren": false,
        "isFolder": false,
        "name": "_ChildScript_NORMALIZED_TIMESTAMP.js",
        "parent": {
          "id": "00000000-0000-0000-0000-000000000000",
          "path": "/_RootFolder_NORMALIZED_TIMESTAMP",
        },
        "path": "/_RootFolder_NORMALIZED_TIMESTAMP/_ChildScript_NORMALIZED_TIMESTAMP.js",
      },
    ],
    "total": 2,
  },
}
`;

exports[`script-tree get-script-tree-children should get empty children for non-folder script 1`] = `
{
  "content": [],
  "structuredContent": {
    "items": [],
    "total": 0,
  },
}
`;

exports[`script-tree get-script-tree-root should get root level script items 1`] = `
{
  "content": [],
  "structuredContent": {
    "items": [
      {
        "hasChildren": true,
        "isFolder": true,
        "name": "_RootFolder_NORMALIZED_TIMESTAMP",
        "parent": null,
        "path": "/_RootFolder_NORMALIZED_TIMESTAMP",
      },
      {
        "hasChildren": false,
        "isFolder": false,
        "name": "_RootScript_NORMALIZED_TIMESTAMP.js",
        "parent": null,
        "path": "/_RootScript_NORMALIZED_TIMESTAMP.js",
      },
    ],
    "total": 2,
  },
}
`;
